--- a/.travis.yml
+++ b/.travis.yml
@@ -12,20 +12,12 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - gcc-4.8
-    - gcc-5
-    - gcc-6
+    - g++-5
 
 matrix:
   include:
   - os: linux
-    compiler: gcc
-  - os: linux
-    compiler: gcc-4.8
-  - os: linux
-    compiler: gcc-5
-  - os: linux
-    compiler: gcc-6
+    compiler: g++-5
 
 script:
   - make
