--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,61 @@
+# Enable C++ support
 language: cpp
-sudo: false
 
-branches:
-  only:
-    - master
+# Compiler selection
+compiler:
+  - clang
+  - gcc
 
-cache: apt
+# Build steps
+script:
+  - make
+
+sudo: required
+dist: trusty
 
 addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
+    - llvm-toolchain-precise-3.6
     packages:
+    - gcc-5
     - g++-5
+    - clang-3.6
 
 matrix:
   include:
-  - os: linux
-    compiler: g++-5
-
-script:
-  - make
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env: COMPILER=g++-4.9
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env: COMPILER=g++-5
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.6
+          packages:
+            - clang-3.6
+      env: COMPILER=clang++-3.6
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.7
+          packages:
+            - clang-3.7
+      env: COMPILER=clang++-3.7
